gallery mason update

--- a/public/hikes.html
+++ b/public/hikes.html
@@ -20,9 +20,11 @@
             <div class="image" v-for="hike in hikes">
                 <h2>{{hike.title}}</h2>
                 <img :src="hike.path" />
-                <h2>{{hike.location}}</h2>
                 <!-- EMBED MAP -->
+                <a href="{{hike.location}}">LINK TO MAPS</a>
+                <!-- <h2>{{hike.location}}</h2> -->
                 <!-- CHECKBOX FUNCTION -->
+                HIKED <input type="checkbox" id="myCheck">
             </div>
         </section>
     </div>
