making LINK TO MAPS url clickable

--- a/public/hikes.html
+++ b/public/hikes.html
@@ -21,7 +21,7 @@
                 <h2>{{hike.title}}</h2>
                 <img :src="hike.path" />
                 <!-- EMBED MAP -->
-                <a href="{{hike.location}}">LINK TO MAPS</a>
+                <a :href="hike.location">LINK TO MAPS</a>
                 <!-- <h2>{{hike.location}}</h2> -->
                 <!-- CHECKBOX FUNCTION -->
                 HIKED <input type="checkbox" id="myCheck">
